# AlgorithmTrading--Interpolation-Approximation--in-Qt-CPP

./: CMakeLists.txt  Makefile  README.md  main.cc
charts/: chartarea.cc  chartarea.h  simplechart.cc  simplechart.h
controller/: controller.cc  controller.h
controller/date_time_dialog/: datetimedialog.cc  datetimedialog.h
data/materials/: AAPL.csv  ADBE.csv  CVX.csv  DPZ.csv  F.csv  aboba.csv  data_weight.csv  part4.csv
forms/: view.ui
model/abstractmodel/: abstractmodel.cc  abstractmodel.h
model/approximation/: approximation.cc  approximation.h
model/interpolation/: interpolation.cc  interpolation.h
parser/: parser.cc  parser.h
table/: tablecontroller.cc  tablecontroller.h
translate/: AlgorithmTrading_ru_RU.ts
